--- a/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
@@ -5,10 +5,7 @@
       <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
     </view>
     <view class="name omit single">{{shopInfo.name}}</view>
-    <view class="more-btn row" bindtap="navToShop">
-      <text>进入店铺</text>
-      <image class="more-icon" src="https://img.ubo.vip/mp/selection/goods-detail/to-icon.png" />
-    </view>
+    <view class="check-btn" bindtap="navToShop">进入店铺</view>
   </view>
   <scroll-view class="goods-list" scroll-x>
     <view 
