--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -142,7 +142,7 @@ page {
   width: 100%;
 }
 .goods-info-wrap {
-  padding: 24rpx;
+  padding: 32rpx;
   border-radius: 32rpx;
   background: #fff;
   overflow: hidden;
@@ -185,18 +185,55 @@ page {
   font-size: 24rpx;
 }
 
-.list-spec {
-  margin: 18rpx 24rpx;
-  padding: 0 24rpx;
-  height: 110rpx;
-  font-size: 26rpx;
+.option-info-wrap {
+  margin: 20rpx;
+  padding: 12rpx 32rpx;
   background: #fff;
-  border-radius: 12rpx;
+  border-radius: 32rpx;
 }
-.list-spec-title {
-  color: #333;
-  font-weight: 600;
+.option-item {
+  display: flex;
+  padding: 24rpx 0;
 }
+.option-label {
+  width: 136rpx;
+  color: #6A6F75;
+  font-size: 26rpx;
+}
+.option-content {
+  flex: 1;
+  color: #14191F;
+  font-size: 26rpx;
+}
+.option-arrow {
+  margin-top: 10rpx;
+  width: 18rpx;
+  height: 18rpx;
+}
+.address-icon {
+  margin-right: 8rpx;
+  width: 30rpx;
+  height: 30rpx;
+}
+.address-detail {
+  flex: 1;
+}
+.delivery-tips {
+  margin-top: 8rpx;
+  color: #6A6F75;
+  font-size: 26rpx;
+}
+.confidence-tag {
+  margin-right: 8rpx;
+  width: 78rpx;
+  height: 24rpx;
+}
+.license-icon {
+  margin-right: 8rpx;
+  width: 26rpx;
+  height: 26rpx;
+}
+
 .choose-btn {
   display: flex;
   align-items: center;
@@ -214,11 +251,11 @@ page {
 }
 
 .evaluation-summary-wrap {
-  margin: 18rpx 24rpx;
-  padding: 0 24rpx;
+  margin: 20rpx;
+  padding: 12rpx 32rpx;
   height: 110rpx;
   background: #fff;
-  border-radius: 12rpx;
+  border-radius: 32rpx;
 }
 .evaluation-user-avatar-wrap {
   margin-left: 8rpx;
@@ -247,9 +284,17 @@ page {
 }
 
 .goods-detail {
+  margin-top: 20rpx;
   padding: 24rpx;
   font-size: 0;
   background: #fff;
+  border-radius: 32rpx 32rpx 0 0;
+}
+.goods-detail-title {
+  padding: 12rpx 0 32rpx 24rpx;
+  color: #0e0e0e;
+  font-size: 32rpx;
+  font-weight: bold;
 }
 
 .recommend-goods-wrap {
