--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -12,11 +12,10 @@
     <view class="info-wrap row between">
       <view class="row baseline">
         <price-unit price="{{item.price || 0}}" />
-        <view class="market-price">¥{{item.marketPrice}}</view>
+        <view class="market-price" wx:if="{{item.marketPrice}}">¥{{item.marketPrice}}</view>
       </view>
       <view class="sales-volume">
-        <text>已售</text>
-        <text style="font-weight: bold;">{{ item.salesVolume }}</text>
+        已售{{ item.salesVolume }}
       </view>
     </view>
     <view class="shop-info row" wx:if="{{item.shopInfo}}" catchtap="navToShop">
