--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -1,3 +1,25 @@
+.row {
+  display: flex;
+  align-items: center;
+}
+.row.between {
+  justify-content: space-between;
+}
+.row.baseline {
+  align-items: baseline;
+}
+
+.omit {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.omit.single {
+  -webkit-line-clamp: 1;
+}
+
 .goods-item {
   margin-bottom: 12rpx;
   width: 350rpx;
@@ -41,12 +63,12 @@
   padding: 18rpx;
 }
 
-.goods-name-item {
+.goods-name {
   color: #333;
   font-size: 26rpx;
   font-weight: bold;
 }
-.goods-tag-item {
+.goods-tag {
   padding: 1rpx 10rpx;
   height: 33rpx;
   color: #ef3741;
