--- a/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxss
@@ -1,3 +1,22 @@
+.row {
+  display: flex;
+  align-items: center;
+}
+.row.between {
+  justify-content: space-between;
+}
+.row.baseline {
+  align-items: baseline;
+}
+
+.omit {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .shop-showcase {
   margin: 20rpx;
   padding: 24rpx;
@@ -47,31 +66,32 @@
   border-radius: 18rpx;
 }
 
-.goods-list {
-  margin-top: 24rpx;
-  white-space: nowrap;
-}
 .goods-item {
   display: inline-block;
+  margin-top: 24rpx;
   margin-right: 18rpx;
-  width: 200rpx;
-  height: 300rpx;
+  width: 210rpx;
   vertical-align: top;
   font-size: 0;
-  border: 1px solid #eee;
-  border-radius: 16rpx;
   overflow: hidden;
 }
-.goods-image {
-  width: 206rpx;
-  height: 206rpx;
+.goods-item:nth-child(3n) {
+  margin-right: 0;
 }
-.content {
-  padding: 12rpx;
+.goods-image {
+  width: 210rpx;
+  height: 206rpx;
+  border-radius: 16rpx;
 }
 .goods-title {
+  margin-top: 18rpx;
   color: #333;
   font-size: 24rpx;
-  font-weight: 500;
-  white-space: initial;
+}
+.price-wrap {
+  margin-top: 8rpx;
+}
+.sale-volume {
+  color: #959595;
+  font-size: 20rpx;
 }
