--- a/pages/subpages/mall/goods/components/spec-popup/index.wxss
+++ b/pages/subpages/mall/goods/components/spec-popup/index.wxss
@@ -2,14 +2,13 @@
   display: flex;
   flex-direction: column;
   padding: 24rpx;
-  height: 900rpx;
+  height: 1000rpx;
   background-color: #fff;
   border-radius: 16rpx 16rpx 0 0;
 }
 
 .spec-info-wrap {
   display: flex;
-  align-items: flex-end;
   margin-bottom: 20rpx;
   height: 200rpx;
 }
@@ -21,53 +20,55 @@
 .spec-info {
   margin-left: 24rpx;
   flex: 1;
+  height: 190rpx;
   color: #333;
+  font-size: 24rpx;
+}
+.commission {
+  color: #F5701D;
   font-size: 24rpx;
 }
 .spec-stock {
   margin: 8rpx 0;
+  flex: 1;
   color: #999;
 }
 
 .selection-mian {
+  margin-top: 32rpx;
   flex: 1;
   overflow-y: scroll;
 }
 .spec-list {
-  padding: 30rpx 0;
+  margin-bottom: 32rpx;
 }
-.dividing-line {
-  position: relative;
-  margin-bottom: 30rpx;
-  height: 1rpx;
-  background-color: #dbdbdb;
-}
-.dividing-line-title {
-  position: absolute;
-  top: -14rpx;
-  left: 0;
-  padding-right: 20rpx;
-  line-height: 30rpx;
+.spec-title {
   color: #333;
-  font-size: 30rpx;
-  font-weight: 500;
-  background-color: #fff;
+  font-size: 26rpx;
+  font-weight: 550;
 }
+.spec-content {
+  color: #666;
+  font-size: 26rpx;
+}
+.spec-content-arrow {
+  width: 24rpx;
+  height: 24rpx;
+} 
 .spec-tips {
   display: inline-block;
   margin: 24rpx 24rpx 0 0;
-  padding: 0 20rpx;
-  height: 64rpx;
+  padding: 10rpx 20rpx;
+  max-width: 100%;
   font-size: 24rpx;
   color: #333;
-  line-height: 62rpx;
-  white-space: nowrap;
   border-radius: 8rpx;
   border: 1px solid #F6F6F6;
   background-color: #F6F6F6;
 }
 .spec-tips.selected {
-  border: 1px solid #E1C7AA;
+  color: #F5701D;
+  border: 1px solid #F5701D;
   background-color: rgb(254, 244, 245);
 }
 
@@ -79,7 +80,7 @@
 .btns-wrap {
   margin-top: 24rpx;
 }
-.add-cart-btn, .buy-btn, .edit-btn {
+.cart-btn, .buy-btn, .edit-btn {
   flex: 1;
   height: 80rpx;
   color: #fff;
@@ -87,12 +88,22 @@
   border-radius: 40rpx;
   background: #e6e6e6;
 }
-.add-cart-btn.active {
-  background: #1986F8;
+.cart-btn.active {
+  background: #FF3636;
+}
+.cart-btn.border {
+  color: #ccc;
+  border: 1px solid #ccc;
+  background: none !important;
+}
+.cart-btn.border.active {
+  color: #FF3636;
+  border: 1px solid #FF3636;
+  background: none !important;
 }
 .buy-btn.active {
-  background: #161F4E;
+  background: #FF3636;
 }
 .edit-btn.active {
-  background: #212121;
+  background: #FF3636;
 }
