--- a/pages/subpages/mall/goods/components/spec-popup/index.wxss
+++ b/pages/subpages/mall/goods/components/spec-popup/index.wxss
@@ -25,7 +25,7 @@
   font-size: 24rpx;
 }
 .commission {
-  color: #F5701D;
+  color: var(--theme-color);
   font-size: 24rpx;
 }
 .spec-stock {
@@ -67,9 +67,9 @@
   background-color: #F6F6F6;
 }
 .spec-tips.selected {
-  color: #F5701D;
-  border: 1px solid #F5701D;
-  background-color: rgb(254, 244, 245);
+  color: var(--theme-color);
+  border: 1px solid var(--theme-color);
+  background: #ebf6f8;
 }
 
 .count-control-wrap {
@@ -85,11 +85,11 @@
   height: 80rpx;
   color: #fff;
   font-size: 28rpx;
-  border-radius: 40rpx;
+  border-radius: 32rpx;
   background: #e6e6e6;
 }
 .cart-btn.active {
-  background: #FF3636;
+  background: var(--theme-color);
 }
 .cart-btn.border {
   color: #ccc;
@@ -97,13 +97,13 @@
   background: none !important;
 }
 .cart-btn.border.active {
-  color: #FF3636;
-  border: 1px solid #FF3636;
+  color: var(--theme-color);
+  border: 1px solid var(--theme-color);
   background: none !important;
 }
 .buy-btn.active {
-  background: #FF3636;
+  background: var(--theme-color);
 }
 .edit-btn.active {
-  background: #FF3636;
+  background: var(--theme-color);
 }
