--- a/pages/subpages/mall/goods/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxss
@@ -29,6 +29,156 @@
   font-size: 26rpx;
 }
 
+.delivery-method-wrap {
+  margin: 24rpx;
+  background: #edf0f3;
+  border-radius: 16rpx;
+  overflow: hidden;
+}
+.menu {
+  display: flex;
+  background: #edf0f3;
+}
+.menu-item {
+  position: relative;
+  flex: 1;
+  height: 80rpx;
+  color: #333;
+  font-size: 26rpx;
+  background: #fff;
+}
+.menu-item-inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: #edf0f3;
+}
+.menu-item.active {
+  color: var(--theme-color);
+  font-size: 30rpx;
+  font-weight: bold;
+  border-radius: 16rpx 16rpx 0 0;
+}
+.menu-item.active > .menu-item-inner {
+  background: #fff;
+  border-radius: 16rpx 16rpx 0 0;
+}
+.menu-item:first-child > .menu-item-inner{
+  border-bottom-right-radius: 16rpx;
+}
+.menu-item:first-child.active > .menu-item-inner{
+  border-bottom-right-radius: 0;
+}
+.menu-item:last-child > .menu-item-inner{
+  border-bottom-left-radius: 16rpx;
+}
+.menu-item:last-child.active > .menu-item-inner{
+  border-bottom-left-radius: 0;
+}
+
+.address-wrap {
+  padding: 24rpx;
+  background: #fff;
+}
+.pickup-address-wrap {
+  display: flex;
+  align-items: flex-start;
+}
+.pickup-address {
+  flex: 1;
+}
+.pickup-address-name {
+  color: #333;
+  font-size: 36rpx;
+  font-weight: bold;
+}
+.pickup-address-detail {
+  margin-top: 8rpx;
+  color: #333;
+  font-size: 28rpx;
+}
+.distance-info {
+  display: flex;
+  align-items: center;
+  margin-top: 12rpx;
+}
+.distance-icon {
+  width: 32rpx;
+  height: 32rpx;
+}
+.distance {
+  margin-left: 2rpx;
+  color: var(--theme-color);
+  font-size: 26rpx;
+}
+.check-map-btn {
+  display: flex;
+  align-items: center;
+  margin-left: 12rpx;
+  padding-left: 12rpx;
+  height: 28rpx;
+  color: #999;
+  font-size: 26rpx;
+  line-height: 1;
+  border-left: 1px solid #eee;
+}
+.address-arrow {
+  margin-left: 6rpx;
+  width: 20rpx;
+  height: 20rpx;
+}
+.change-btn {
+  display: flex;
+  align-items: center;
+  margin-top: 6rpx;
+  margin-left: 12rpx;
+  color: var(--theme-color);
+  font-size: 26rpx;
+  line-height: 1;
+}
+.change-btn-arrow {
+  margin-left: 6rpx;
+  width: 20rpx;
+  height: 20rpx;
+}
+
+.pickup-info-wrap {
+  display: flex;
+  margin-top: 24rpx;
+  padding-top: 24rpx;
+  border-top: 1px solid #eee;
+}
+.pickup-info {
+  flex: 1;
+}
+.pickup-info:first-child {
+  margin-right: 24rpx;
+  padding-right: 24rpx;
+  border-right: 1px solid #eee;
+}
+.pickup-info-title {
+  color: #666;
+  font-size: 28rpx;
+}
+.pickup-info-detail {
+  display: flex;
+  align-items: center;
+  color: #333;
+  font-size: 32rpx;
+  font-weight: bold;
+  white-space: nowrap;
+}
+.pickup-time, .pickup-phone {
+  flex: 1;
+}
+.pickup-info-arrow {
+  margin-left: 12rpx;
+  width: 20rpx;
+  height: 20rpx;
+}
+
 /* 地址 */
 .address-icon {
   width: 36rpx; 
@@ -147,16 +297,11 @@
   padding-bottom: 0;
   border-bottom: none;
 }
-.balance-wrap {
-  display: flex;
-  align-items: center;
-  font-size: 28rpx;
+
+.balance {
   color: #333;
+  font-size: 28rpx;
   font-weight: 500;
-}
-.balance-wrap switch {
-  margin-left: 50rpx;
-  zoom: .5;
 }
 
 .bottom-bar {
